base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-server
spec:
  # No replica count here; overlays will handle it
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:stable-alpine
        ports:
        - containerPort: 8080
