base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
spec:
  to:
    kind: Service
    name: nginx-service # Must match your service metadata.name exactly
    weight: 100
  port:
    targetPort: http-port
